--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -2292,20 +2292,12 @@ layers:
                 polygons:
                     visible: true
                     style: building-grid
-                    extrude: function() { return feature.height || 20; }
+                    extrude: true
                     color: [.885, .870, .870]
                 lines:
                     visible: true
                     style: building-lines
-                    extrude: function() { return feature.height || 20; }
-                    
-            buildings-z17-boost:
-                filter: { $zoom: { min: 17, max: 18 }, height: false }
-                draw:
-                    polygons:
-                        extrude: 30
-                    lines:
-                        extrude: 30
+                    extrude: true
 
         # landuse-specific rules
         in_park:
