--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -5208,7 +5208,8 @@ layers:
                 # default for national forests and more?
                 draw:
                     dots2:
-                        color: [[4,[0.655,0.800,0.796]],[11,[0.588,0.780,0.773]],[12,[0.242,0.737,0.712]],[14,[0.412,0.733,0.718]],[15,[0.635,0.792,0.788]]]
+                        # color: [[4,[0.655,0.800,0.796]],[11,[0.588,0.780,0.773]],[12,[0.242,0.737,0.712]],[14,[0.412,0.733,0.718]],[15,[0.635,0.792,0.788]]]
+                        color: [[4,[0.655,0.800,0.796]],[11,[0.588,0.780,0.773]],[12,[0.635,0.792,0.788]]]
                         order: function() { return feature.sort_key + 1 || 1; }
                         visible: true
 
