added light blue to water_boundaries-not-ocean

--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -976,7 +976,7 @@ layers:
                 lines:
                     order: 30
                     # color: [[8,[0.635,0.737,0.753]],[13,[0.635,0.737,0.753]],[14,[0.569,0.722,0.749]],[15,[0.397,0.743,0.809]]]
-                    color: [[8,[0.635,0.737,0.753]],[13,[0.635,0.737,0.753]],[14,[0.543,0.740,0.780]],[17,[0.643,0.824,0.851]]]
+                    color: [[8,[0.749,0.831,0.867]],[12,[0.698,0.788,0.816]],[13,[0.698,0.784,0.812]],[14,[0.627,0.788,0.831]],[17,[0.643,0.824,0.851]]]
                     width: [[8,0.5px],[10,0.5px],[11,0.5px],[12,0.75px],[13,1px],[14,1px],[15,1px],[16,1px],[17,1px]]
                     join: round
             early:
