fix for 104: inactive search icons

--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -895,7 +895,11 @@ layers:
                 size: [36px,46px]
                 collide: false
                 anchor: top
-
+        inactive:
+            filter: { state: inactive }
+            draw:
+                icons:
+                    sprite: search-inactive
 
     # Basemap styling
     earth:
