--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -1593,7 +1593,7 @@ layers:
                             font:
                                 fill: [0.0,0.0,0.0]
                                 size: 14px
-                                stroke: { color: [1.00,1.00,1.00], width: 4 }
+                                stroke: { color: [1.00,1.00,1.00], width: 3 }
                 labels-secondary3:
                     filter: { $zoom: { min: 18 } }
                     draw:
@@ -1685,7 +1685,7 @@ layers:
                             font:
                                 fill: [0.5,0.5,0.5]
                                 size: 10px
-                                stroke: { color: *text_stroke_road4, width: 2 }
+                                stroke: { color: [1.00,1.00,1.00], width: 1 }
                 labels-tertiary-z14:
                     filter: { $zoom: [14] }
                     draw:
@@ -1698,7 +1698,7 @@ layers:
                                 size: 11px
                                 stroke: { color: [1.00,1.00,1.00], width: 1 }
                 labels-tertiary-z15:
-                    filter: { $zoom: [15] }
+                    filter: { $zoom: [15,16] }
                     draw:
                         text:
                             priority: 25
@@ -1708,8 +1708,8 @@ layers:
                                 fill: [0.3,0.3,0.3]
                                 size: 12px
                                 stroke: { color: [1.00,1.00,1.00], width: 1 }
-                labels-tertiary2:
-                    filter: { $zoom: { min: 16, max: 18 } }
+                labels-tertiary-z17:
+                    filter: { $zoom: { min: 17, max: 18 } }
                     draw:
                         text:
                             priority: 25
@@ -1718,7 +1718,7 @@ layers:
                             font:
                                 fill: [0.15,0.15,0.15]
                                 size: 13px
-                                # stroke: { color: *text_stroke, width: 4 }
+                                stroke: { color: [1.00,1.00,1.00], width: 2 }
                 labels-tertiary3:
                     filter: { $zoom: { min: 18 } }
                     draw:
@@ -1850,6 +1850,7 @@ layers:
                         font:
                             fill: [0.35,0.35,0.35]
                             size: 13px
+                            stroke: { color: [1.00,1.00,1.00], width: 1 }
             labels-minor_road-z17:
                 filter: { $zoom: { min: 17, max: 18 } }
                 draw:
@@ -1860,7 +1861,7 @@ layers:
                         font:
                             fill: [0.25,0.25,0.25]
                             size: 13px
-                            # stroke: { color: *text_stroke, width: 1 }
+                            stroke: { color: [1.00,1.00,1.00], width: 2 }
             labels-minor_road2:
                 filter: { $zoom: { min: 18 } }
                 draw:
@@ -2065,7 +2066,7 @@ layers:
                             # need a fill color?
                             fill: [0.25,0.25,0.25]
                             size: 12px
-                            # stroke: { color: *text_stroke, width: 3 }
+                            stroke: { color: [1.00,1.00,1.00], width: 1 }
         track:
             filter: { kind: path, highway: track }
             draw:
@@ -2138,7 +2139,7 @@ layers:
                         font:
                             # need fill color?
                             size: 12px
-                            stroke: { color: *text_stroke_road4, width: 4 }
+                            stroke: { color: [1.00,1.00,1.00], width: 1 }
         airport-lines:
             filter: { kind: minor_road, aeroway: [runway,taxiway] }
             draw:
