--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -4291,7 +4291,7 @@ layers:
                         priority: 17
 
             # add generic icon at high zoom
-                        default-label-text-blend-order:
+            default-label-names:
                 filter: { $zoom: { min: 13 }, area: false }
                 draw:
                     text-blend-order:
@@ -4672,14 +4672,14 @@ layers:
                         icons:
                             visible: false
                             #size: [[12, 10px], [14, 10px], [15, 16px]]
-                            text-blend-order: { visible: false }
+                        text-blend-order: { visible: false }
                 low-priority-early-z14:
                     filter: { kind_tile_rank: { min: 7 }, area: false, $zoom: { min: 14, max: 15 } }
                     draw:
                         icons:
                             size: [[12, 10px], [14, 11px], [15, 16px]]
                             #visible: false
-                            text-blend-order: { visible: false }
+                        text-blend-order: { visible: false }
             tram-stop-early:
                 filter: { kind: tram_stop, $zoom: { max: 15 } }
                 draw:
@@ -5144,7 +5144,7 @@ layers:
                 - { $zoom: { min: 15 }, area: { min: 50000 } }
                 - { $zoom: { min: 16 }, area: { min: 20000 } }
                 - { $zoom: { min: 17 } }
-            default-label-text-blend-order:
+        default-label-text:
             draw:
                 text-blend-order:
                     font:
