improve dots shader to look good with proxy tiles

--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -695,11 +695,12 @@ styles:
                 global: |
                     #ifdef TANGRAM_FRAGMENT_SHADER
                         float TileDots(float scale, float size) {
-                            vec2 IN = brick(TileCoords() * scale, 2.);
+                            vec2 tc = TileCoords() * scale * pow(2., floor(u_map_position.z) - abs(u_tile_origin.z));
+                            vec2 IN = brick(tc, 2.);
                             float A = circleDF(vec2(0.5) - IN) * 1.8;
                             float d = 0.0;
                             if (u_map_position.z < 18.) {
-                                vec2 OUT = fract(TileCoords() * scale * 2.);
+                                vec2 OUT = fract(tc * 2.);
                                 float B = circleDF(vec2(0.25) - OUT) * 7.;
                                 B = min(B, circleDF(vec2(0.75, 0.25) - OUT) * 7.);
                                 B = min(B, circleDF(vec2(0.50, 0.75) - OUT) * 7.);
