--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -1311,7 +1311,7 @@ layers:
                         outline:
                             color: [[13, [0.827,0.827,0.827]], [15, [1.000,0.739,0.710]]]
                             # todo: investigate width optimizations
-                            width: [[9, 0.0px], [11, 0px], [12, 0px], [14, 0px], [15, 1.75px], [16, 2px], [17, 3px]]
+                            width: [[14, 0px], [15, 1.75px], [16, 2px], [17, 3px]]
                 routes:
                     filter: { ref: true }
                     draw:
