remove some no-op zoom stops (repeated zero values that we don't need to interpolate between)

--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -1479,7 +1479,7 @@ layers:
                         width: [[11, 0.65px], [12, 0.75px], [13, 1.25px], [14, 2px], [15, 5px], [16, 10m], [17, 10m]]
                         outline:
                             color: [[15, [1.000,0.739,0.710]]]
-                            width: [[11, 0px], [14, 0px], [15, 1.75px], [16, 2px], [17, 3px]]
+                            width: [[14, 0], [15, 1.75px], [16, 2px], [17, 3px]]
                 routes:
                     filter: { ref: true, $zoom: { min: 12} }
                     draw:
@@ -1488,7 +1488,7 @@ layers:
                             width: [[11, 0.65px], [12, 0.75px], [13, 1.25px], [14, 2px], [15, 5px], [16, 12m], [17, 12m]]
                             outline:
                                 color: [0.827,0.827,0.827]
-                                width: [[11, 0px], [14, 0px], [15,  1.75px], [16, 2px], [17, 3px]]
+                                width: [[14, 0px], [15,  1.75px], [16, 2px], [17, 3px]]
                     tunnel:
                         filter: {is_tunnel: yes, $zoom: {min: 13} }
                         draw:
@@ -1620,7 +1620,7 @@ layers:
                         outline:
                             color: [0.827,0.827,0.827]
                             # todo: look at zoom 13 width
-                            width: [[12, 0px], [13, 0px], [14, 0px], [15, 0px], [16, 1.0px], [18, 3.5px]]
+                            width: [[15, 0], [16, 1.0px], [18, 3.5px]]
                 routes:
                     filter: { ref: true, $zoom: { min: 12} }
                     draw:
@@ -1629,7 +1629,7 @@ layers:
                             width: [[11, 0.5px], [12, 0.5px], [13, 0.65px], [14, 1.0px], [15, 2px], [16, 8m], [19, 10m]]
                             outline:
                                 color: [0.827,0.827,0.827]
-                                width: [[12, 0px], [13, 0px], [14, 0px], [15, 0px], [16, 1.0px], [18, 3.5px]]
+                                width: [[15, 0], [16, 1.0px], [18, 3.5px]]
                     tunnel:
                         filter: {is_tunnel: yes, $zoom: {min: 13} }
                         draw:
@@ -1646,7 +1646,7 @@ layers:
                             width: [[10, 0.5px], [14, 2px], [16, 4m], [17, 5m], [18, 6m]]
                             outline:
                                 color: [[12,*major_casing2]]
-                                width: [[12, 0px], [14, 1px], [16, 1.5px], [17, 2px]]
+                                width: [[12, 0], [14, 1px], [16, 1.5px], [17, 2px]]
                 in_park:
                     filter: { landuse_kind: [park,nature_reserve,conservation,golf_course,garden] }
                     draw:
@@ -1756,7 +1756,7 @@ layers:
                     #width: [[11, 0.5px], [12, 0.75px], [13, 1.0px], [14, 1.2px], [15, 2.5px], [16, 8m]]
                     outline:
                         color: [0.843,0.843,0.843]
-                        width: [[12, 0.0px], [13, 0px], [15, 0px], [16, 2px], [17, 3px]]
+                        width: [[15, 0], [16, 2px], [17, 3px]]
             # Force minor roads to draw under everything else early (server bug?)
             early:
                 filter: { $zoom: { max: 14 } }
@@ -1992,7 +1992,7 @@ layers:
                     width: [[14, 0.6px], [16, 1px], [17, 2.5m]]
                     outline:
                         color: [0.799,0.799,0.799]
-                        width: [[14, 0.0], [16, 0.5px], [18, 3px]]
+                        width: [[14, 0], [16, 0.5px], [18, 3px]]
             pedestrian:
                 filter: { highway: pedestrian }
                 draw:
@@ -2096,7 +2096,7 @@ layers:
                     join: round
                     outline:
                         color: *minor_casing1
-                        width: [[14, 0px], [15, 0px], [16, 0.5px], [17, 1.0px], [18, 2.0px]]
+                        width: [[15, 0px], [16, 0.5px], [17, 1.0px], [18, 2.0px]]
             bridge:
                 filter: { is_bridge: yes }
                 draw:
@@ -2113,7 +2113,7 @@ layers:
                         width: [[13, 0.5px], [14, 0.5px], [15, 1.0px], [16, 6m]]
                         outline:
                             color: [[16,*green1_r],[17,*major_casing1]]
-                            width: [[14, 0px], [15, 0px], [16, 0.25px], [17, 0.5px], [18, 1.0px], [19, 2.0px]]
+                            width: [[15, 0px], [16, 0.25px], [17, 0.5px], [18, 1.0px], [19, 2.0px]]
         steps:
             filter: { kind: path, highway: steps }
             draw:
@@ -2201,7 +2201,7 @@ layers:
                     color: [0.702,0.843,0.933]
                     width: [[12, 0.5px], [14, 1.0px], [15, 1.0px], [16, 1.25px]]
                     outline:
-                        width: 0px
+                        width: 0
         aerialway:
             filter: { kind: aerialway }
             draw:
